Implement bookings and damage-report features
Add complete booking and damage-report functionality and adjust related models/controllers.

- New RentalBooking JPA entity and RentalBookingRepository with queries for user, admin listing and availability checks.
- BookingPricing utility and BookingService implementing checkout, admin CRUD, validation, pricing calculation and vehicle availability refresh.
- BookingController REST endpoints for customer checkout and admin booking management.
- New DamageReportService and DamageReportController to create/list damage reports (public/admin), fetch eligible rentals and manage admin workflows.
- Extend UserDamageReport to reference RentalBooking, store incident metadata and JSON fields for damage types/body locations/photos; update UserDamageReportRepository with fetch queries for profile/admin views.
- Refactor AuthController to use BookingService, add profile update and password update endpoints, and adjust booking/damage report response DTOs to match RentalBooking model.
- VehicleController: default availability set to "Available" when creating vehicles.
- Also include frontend static file changes (HTML/CSS/JS) to support new booking and damage-report flows.

These changes add end-to-end booking price calculations, admin operations, and richer damage report handling for the application.

Co-Authored-By: Adhamwael22 <208068193+Adhamwael22@users.noreply.github.com>
Co-Authored-By: MarlyHossam <189353424+MarlyHossam@users.noreply.github.com>